<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:padding="6dp"
    android:fitsSystemWindows="true">

    <!-- TODO: Diseñar el header del home -->

    <!--Texview del header-->

        <RelativeLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_stats"
                style="@style/MyTextViewStyleH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/statistics"
                />

            <ImageButton
                android:id="@+id/btn_help"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_help_outline"
                android:gravity="center"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/trader_level"
                android:layout_alignParentStart="true"
                style="@style/MyTextViewStyleH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" />

            <!--TODO: colocar el Texview de nivel de trader-->

            <TextView
                android:id="@+id/tv_level_trader"
                android:layout_alignParentRight="true"
                android:text="@string/dummy_level"
                style="@style/MyTextViewStyleH2Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/next_evaluation"
                style="@style/MyTextViewStyleH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--TODO: colocar el Texview de nivel de trader-->

            <TextView
                android:id="@+id/tv_next_evaluation"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/dummy_date"
                style="@style/MyTextViewStyleH2Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/response_time"
                style="@style/MyTextViewStyleH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--TODO: colocar el Texview de nivel de trader-->

            <TextView
                android:id="@+id/tv_response_time"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/dummy_response"
                style="@style/MyTextViewStyleH2Purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--TODO: implementar las barras de estats-->
            
            <ProgressBar
                android:id="@+id/pb_response_rate"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/pogress_bar_style"
                android:max="500"
                android:progress="0"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <ProgressBar
                android:id="@+id/pb_trad_complete"
                android:layout_toEndOf="@id/pb_response_rate"
                android:layout_toRightOf="@id/pb_response_rate"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/pogress_bar_style"
                android:max="500"
                android:progress="0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                />

            <ProgressBar
                android:id="@+id/pb_ontime_delivery"
                android:layout_toEndOf="@id/pb_trad_complete"
                android:layout_toRightOf="@id/pb_trad_complete"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/pogress_bar_style"
                android:max="500"
                android:progress="0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                />

            <ProgressBar
                android:id="@+id/pb_positive_rating"
                android:layout_toEndOf="@id/pb_ontime_delivery"
                android:layout_toRightOf="@id/pb_ontime_delivery"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/pogress_bar_style"
                android:max="500"
                android:progress="0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                />




        </RelativeLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--TODO: los titulos de stats-->

            <TextView
                style="@style/MyTextViewStyleH2.wrap.center"
                android:text="@string/response_rate"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/MyTextViewStyleH2.wrap.center"
                android:text="@string/tradding_complete"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/MyTextViewStyleH2.wrap.center"
                android:text="@string/on_time_delivery"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/MyTextViewStyleH2.wrap.center"
                android:text="@string/positive_rating"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

</LinearLayout>