<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_todo1"
            style="@style/MyTextViewStyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum" />

        <TextView
            android:padding="6dp"
            android:id="@+id/content_todo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_todo1"
            android:text="@string/lorem_ipsum_long" />

        <TextView
            style="@style/MyTextViewStyleBlack"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/todo_shape"
            android:textAlignment="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/content_todo"
            android:layout_alignTop="@id/content_todo"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/n_todos"
            android:layout_toEndOf="@id/content_todo"
            android:layout_marginStart="15dp" />




    </RelativeLayout>


</android.support.v7.widget.CardView>